fixed light theme footer alignment issue

--- a/light-theme.css
+++ b/light-theme.css
@@ -522,7 +522,9 @@ input {
 }
 
 footer {
-  justify-content: space-evenly; 
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
 }
 
 footer p {
